samples/_failures_safe/1761361816_55c1da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67c3c398.c: In function ‘main’:
./samples/SAFE/__tmp_67c3c398.c:182:15: error: expected ‘;’ at end of input
  182 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_67c3c398.c:182:9: error: expected declaration or statement at end of input
  182 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_67c3c398.c:182:9: error: expected declaration or statement at end of input
